# bake-with-sophie

./: .dockerignore  Dockerfile  README.md  app.py  pyproject.toml
static/css/: style.css
static/js/: main.js
templates/: about.html  base.html  consulting.html  contact.html  favorites.html  index.html  recipe_detail.html  recipes.html  shop.html
